--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+  <script type="text/javascript">
+    google.load("jquery", "1.3.2");
+  </script>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning">
