--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/> -->
   <meta property="og:url" content="https://vishalned.github.io/mmearth"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <!-- <meta property="og:image" content="static/image/your_banner_image.png" />
+  <!-- <meta property="og:image" content="static/image/banner.png" />
   <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/> -->
+  <meta property="og:image:height" content="630"/>  -->
 
 
   <!-- <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG"> -->
@@ -129,7 +129,7 @@
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>Code - Training</span>
+                  <span>Code - Model</span>
                 </a>
               </span>
 
@@ -185,6 +185,31 @@
 </section>
 <!-- End paper abstract -->
 
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">MMEarth Dataset</h2>
+        <div class="content has-text-justified">
+          <!-- some bullet points -->
+          <ul>
+            <li>MMEarth covers data from 1.2 million locations sampled globally, making the optical image count similar to ImageNet-1K. At each
+              location, data from 12 geo-aligned modalities were collected and grouped into pixel-level and image-level modalities.
+            </li>
+            <li>MMEarth was sampled uniformly across 14 biomes, as per the <a href="https://academic.oup.com/bioscience/article/67/6/534/3102935?login=false" style="color:#3273dc;" target="_blank">Resolve Ecoregions</a> (e.g., Mangroves, Temperate Conifer Forests, Tundra, etc.). 
+              To increase diversity, we considered data from the four years 2017–2020. 
+              Furthermore, we ensured that time-critical modalities were collected around the Sentinel-2 observation date, which serves as the reference. 
+            </li>
+            <li>The six pixel-level modalities represent raster data of size 128 × 128 pixels which capture 1.28 km × 1.28 km on the ground 
+              (e.g., Sentinel-2, Sentinel-1, Aster DEM, Dynamic World, and ESA World Cover). The remaining six image-level modalities represent scalar values for each location 
+              (e.g., Biome, Ecoregion, ERA5 temperature, ERA5 precipitation, Geolocation, and Sentinel-2 observation date). 
+            </li>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Image carousel -->
 <section class="hero is-small">
@@ -195,23 +220,30 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/carousel1.png" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img1.jpg" alt="MY ALT TEXT"/>
         <!-- <h2 class="subtitle has-text-centered">
           First image description.
         </h2> -->
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/carousel2.png" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img2.jpg" alt="MY ALT TEXT"/>
         <!-- <h2 cs -->
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/carousel3.png" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img3.jpg" alt="MY ALT TEXT"/>
         <!-- <h2 class="subtitle has-text-centered">
          Third image description.
        </h2> -->
      </div>
+     <div class="item">
+      <!-- Your image here -->
+      <img src="static/images/carousel/img4.jpg" alt="MY ALT TEXT"/>
+      <!-- <h2 class="subtitle has-text-centered">
+       Fourth image description.
+     </h2> -->
+   </div>
      <!-- <div class="item"> -->
       <!-- Your image here -->
       <!-- <img src="static/images/carousel4.pdf" alt="MY ALT TEXT"/>
