--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-  <script type="text/javascript">
+  <!-- <script src="http://www.google.com/jsapi" type="text/javascript"></script> -->
+  <!-- <script type="text/javascript">
     google.load("jquery", "1.3.2");
-  </script>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  </script> -->
+  <!-- <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script> -->
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning">
@@ -52,7 +52,7 @@
 <body>
 
 
-  <section class="hero">
+  <section class="hero is-light">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
@@ -62,34 +62,34 @@
             <div class="centered">
               <div class="author-row">
                   <div class="col-6 text-center">
-                    <a href="https://vishalned.github.io" target="_blank"><img src="static/images/authors/vishal.jpg" alt="Vishal Nedungadi" class="">
+                    <a href="https://vishalned.github.io"  target="_blank"><img src="static/images/authors/vishal.jpg" alt="Vishal Nedungadi" class="">
                       <p>Vishal Nedungadi</p></a>
                   </div>
                   <div class="col-6 text-center">
-                    <a href="https://scholar.google.de/citations?hl=en&user=lwSTZGgAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"><img src="static/images/authors/ankit.jpg" alt="Ankit Kariryaa" class="">
+                    <a href="https://scholar.google.de/citations?hl=en&user=lwSTZGgAAAAJ&view_op=list_works&sortby=pubdate"  target="_blank"><img src="static/images/authors/ankit.jpg" alt="Ankit Kariryaa" class="">
                       <p>Ankit Kariryaa</p></a> 
                   </div>
                   <div class="col-6 text-center">
-                    <a href="https://scholar.google.de/citations?hl=en&user=k9EWJmcAAAAJ&view_op=list_works" target="_blank"><img src="static/images/authors/stefan.jpg" alt="Stefan Oehmcke" class="">
+                    <a href="https://scholar.google.de/citations?hl=en&user=k9EWJmcAAAAJ&view_op=list_works"  target="_blank"><img src="static/images/authors/stefan.jpg" alt="Stefan Oehmcke" class="">
                       <p>Stefan Oehmcke</p></a>
                   </div>
                   <div class="col-6 text-center">
-                    <a href="https://sergebelongie.github.io/" target="_blank"><img src="static/images/authors/serge.jpg" alt="Serge Belongie" class="">
+                    <a href="https://sergebelongie.github.io/"  target="_blank"><img src="static/images/authors/serge.jpg" alt="Serge Belongie" class="">
                       <p>Serge Belongie</p></a>
                   </div>
                   <div class="col-6 text-center">
-                    <a href="https://christian-igel.github.io/" target="_blank"><img src="static/images/authors/christian.jpg" alt="Christian Igel" class="">
+                    <a href="https://christian-igel.github.io/"  target="_blank"><img src="static/images/authors/christian.jpg" alt="Christian Igel" class="">
                       <p>Christian Igel</p></a>
                   </div>
                   <div class="col-6 text-center">
-                    <a href="https://langnico.github.io/" target="_blank"><img src="static/images/authors/nico.jpg" alt="Nico Lang" class="">
+                    <a href="https://langnico.github.io/"  target="_blank"><img src="static/images/authors/nico.jpg" alt="Nico Lang" class="">
                       <p>Nico Lang</p></a>
                   </div>
                   
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <a href="https://di.ku.dk/english/"
+                    <a href="https://di.ku.dk/english/" style="color:#3273dc;"
                     <span class="author-block">University of Copenhagen<br>
                       <!-- Conferance name and year -->
                     </span>
@@ -169,7 +169,7 @@
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -210,13 +210,40 @@
   </div>
 </section>
 
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">MMEarth Model</h2>
+        <div class="content has-text-justified">
+          <!-- adding an image -->
+
+          <!-- some bullet points -->
+          <ul>
+            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section hero">
+  <figure class="model-image">
+    <img src="static/images/model2.jpg" alt="MMEarth Model" >
+  </figure>
+  <!-- title -->
+  <!-- <h2 class="title is-3 has-text-centered">MMEarth Model</h2> -->
+</section>
+
 
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <!-- create a title that is centered -->
-      <h2 class="title is-4 has-text-centered">MMEarth examples</h2>
+      <h2 class="title is-3 has-text-centered">MMEarth examples</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
