--- a/index.html
+++ b/index.html
@@ -2,35 +2,30 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!-- <script src="http://www.google.com/jsapi" type="text/javascript"></script> -->
-  <!-- <script type="text/javascript">
-    google.load("jquery", "1.3.2");
-  </script> -->
-  <!-- <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script> -->
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning">
-  <!-- <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/> -->
-  <!-- <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/> -->
+  <meta property="og:title" content="MMEarth"/>
+  <!-- <meta property="og:description" content="Large scale multi-modal remote sensing data"/> -->
   <meta property="og:url" content="https://vishalned.github.io/mmearth"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <!-- <meta property="og:image" content="static/image/banner.png" />
+  <meta property="og:image" content="static/images/banner2.jpg" />
   <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>  -->
+  <meta property="og:image:height" content="630"/> 
 
 
-  <!-- <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG"> -->
+  <meta name="twitter:title" content="MMEarth">
   <!-- <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG"> -->
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <!-- <meta name="twitter:image" content="static/images/your_twitter_banner_image.png"> -->
-  <!-- <meta name="twitter:card" content="summary_large_image"> -->
+  <meta name="twitter:image" content="static/images/banner2.jpg">
+  <!-- <meta name="twitter:card" content="MMEarth"> -->
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="representation learning,self-supervised learning,multi-modal, multi-task, masked autoencoder, Earth observation, remote sensing, satellite images, Sentinel-2">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
   <title>MMEarth</title>
-  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="static/images/logo.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -220,9 +215,12 @@
 
           <!-- some bullet points -->
           <ul>
-            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>loreum ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Our model, the Multi-Pretext Masked Autoencoder (MP-MAE), builds on the promising results of masked image modelling with the ConvNeXt V2 architecture.
+              ConvNeXt V2 is a fully convolutional masked autoencoder (MAE) that uses sparse convolutions to predict the masked pixels of an image.
+            </li>
+            <li>Our MP-MAE model extends ConvNeXt V2 by adding a task-specific head for each pretext task. The general-purpose representation is learned by combining the losses of all pretext tasks. 
+              For combining the losses, we use the uncertainty-weighted loss proposed by <a href="https://arxiv.org/abs/1705.07115" style="color:#3273dc;" target="_blank">Kendall et al. (2020)</a>.
+
         </div>
       </div>
     </div>
@@ -239,7 +237,7 @@
 
 
 <!-- Image carousel -->
-<section class="hero is-small">
+<section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <!-- create a title that is centered -->
