mobile fix attempt

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width"/>
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
@@ -22,7 +21,7 @@
   <!-- <meta name="twitter:card" content="MMEarth"> -->
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="representation learning,self-supervised learning,multi-modal, multi-task, masked autoencoder, Earth observation, remote sensing, satellite images, Sentinel-2">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=1200, initial-scale=1">
 
 
   <title>MMEarth</title>
