added banner image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <meta name="twitter:card" content="MMEarth"> -->
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="representation learning,self-supervised learning,multi-modal, multi-task, masked autoencoder, Earth observation, remote sensing, satellite images, Sentinel-2">
-  <meta name="viewport" content="width=1200, initial-scale=1">
+  <meta name="viewport" content="width=1200, initial-scale=1, maximum-scale=1">
 
 
   <title>MMEarth</title>
@@ -148,6 +148,11 @@
 </section>
 
 <hr>
+<section class="section hero is-light", style="margin-top: -50px">
+  <figure class="">
+    <img src="static/images/banner2.png" alt="MMEarth banner">
+  </figure>
+</section>
 
 
 <!-- Teaser video-->
@@ -167,6 +172,8 @@
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
+
+
 <section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -301,7 +308,7 @@
   </section>
   <section class="section hero is-light">
     <figure class="model-image">
-      <img src="static/images/table_result_mp-mae2.png" alt="table results" style="width:60%">
+      <img src="static/images/table_result_mp-mae2.png" alt="table results" style="width:50%">
     </figure>
   </section>
   
