--- a/index.html
+++ b/index.html
@@ -200,25 +200,25 @@
         <h2 class="title is-3">MMEarth Dataset</h2>
         <div class="content has-text-justified">
           <ul>
-            <li>MMEarth covers data from 1.2 million locations sampled globally, making the optical image count similar to ImageNet-1K. At each
-              location, data from 12 geo-aligned modalities were collected and grouped into pixel-level and image-level modalities.
+            <li>MMEarth covers data from <b>1.2 million locations sampled globally</b>, making the optical image count similar to ImageNet-1K. At each
+              location, data from <b>12 aligned modalities</b> were collected and grouped into pixel-level and image-level modalities.
             </li>
-            <li>MMEarth was sampled uniformly across 14 biomes, as per the <a href="https://academic.oup.com/bioscience/article/67/6/534/3102935?login=false" style="color:#3273dc;" target="_blank">Resolve Ecoregions</a> (e.g., Mangroves, Temperate Conifer Forests, Tundra, etc.). 
-              To increase diversity, we considered data from the four years 2017–2020. 
+            <li>MMEarth was <b>sampled uniformly across 14 biomes</b>, as per the <a href="https://academic.oup.com/bioscience/article/67/6/534/3102935?login=false" style="color:#3273dc;" target="_blank">Resolve Ecoregions</a> (e.g., Mangroves, Temperate Conifer Forests, Tundra, etc.).
+              To increase diversity, we considered data from  <b>four years 2017–2020</b>.
               Furthermore, we ensured that time-critical modalities were collected around the Sentinel-2 observation date, which serves as the reference. 
             </li>
-            <li>The six pixel-level modalities represent raster data of size 128 × 128 pixels which capture 1.28 km × 1.28 km on the ground 
-              (e.g., Sentinel-2, Sentinel-1, Aster DEM, Dynamic World, and ESA World Cover). The remaining six image-level modalities represent scalar values for each location 
+            <li>The <b>six pixel-level modalities</b> represent raster data of size 128 × 128 pixels which capture 1.28 km × 1.28 km on the ground
+              (e.g., Sentinel-2, Sentinel-1, Aster DEM, Dynamic World, and ESA World Cover). The remaining <b>six image-level modalities</b> represent scalar values for each location
               (e.g., Biome, Ecoregion, ERA5 temperature, ERA5 precipitation, Geolocation, and Sentinel-2 observation date). 
             </li>
             <li>
               The data can be downloaded from <a href="https://github.com/vishalned/MMEarth-data?tab=readme-ov-file#data-download" style="color:#3273dc;" target="_blank">here</a>. 
-              We provide 3 versions of the data to enable more research in the field of multi-modal representation learning.
+              In addition to the full MMEarth dataset, we provide two smaller "taster" versions (MMEarth64 and MMEarth100k) to facilitate research in multi-modal representation learning:
               <!-- list of 3 data -->
               <ul>
-                <li><b>MMEarth:</b> 1.2 million locations with image size 128 × 128 pixels. This results in the data of size 639 GB.</li>
-                <li><b>MMEarth64:</b> 1.2 million locations with image size 64 × 64 pixels. This results in the data of size 163 GB.</li>
-                <li><b>MMEarth100k:</b> 100k locations with image size 128 × 128 pixels. This results in the data of size 48 GB.</li>
+                <li><b>MMEarth:</b> 1.2M locations with image size 128 × 128 pixels. [639GB]</li>
+                <li><b>MMEarth64:</b> 1.2M locations with center crops of 64 × 64 pixels. [163GB]</li>
+                <li><b>MMEarth100k:</b> 100k locations with image size 128 × 128 pixels. [48GB]</li>
               </ul>
             </li>
             
@@ -260,16 +260,16 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Multi-Pretext Masked Autoencoder (MP-MAE)</h2>
+        <h2 class="title is-3">Multi-Pretext Masked Autoencoder</h2>
         <div class="content has-text-justified">
           <!-- adding an image -->
 
           <!-- some bullet points -->
           <ul>
-            <li>Our MP-MAE model, builds on the promising results of masked image modelling with the ConvNeXt V2 architecture.
+            <li>Our Multi-Pretext Masked Autoencoder (MP-MAE) model, builds on masked image modelling with the ConvNeXt V2 architecture.
               ConvNeXt V2 is a fully convolutional masked autoencoder (MAE) that uses sparse convolutions to predict the masked pixels of an image.
             </li>
-            <li>MP-MAE extends ConvNeXt V2 by adding a task-specific head for each pretext task. The general-purpose representation is learned by combining the losses of all pretext tasks. 
+            <li>MP-MAE extends ConvNeXt V2 by adding a task-specific decoder for each pretext task. The general-purpose representation is learned by combining the losses of all pretext tasks.
           
 
         </div>
@@ -295,12 +295,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
-          <ul>
+          <ol type="1">
             <li>Domain specific pretraining improves representations (i.e. pretraining on optical satellite images).
               Multi-spectral input images improve over RGB channels.</li>
-              <li>Multi-modal pretext tasks improve representations - especially for linear probing as well as in low-data scenarios.</li>
-              <li>Our MP-MAE compares favourably to prior work on SSL for Earth observation data - even with a small encoder</li>
-          </ul>
+              <li>Multi-modal pretext tasks improve representations for Sentinel-2 images - especially for linear probing as well as in low-data scenarios.</li>
+              <li>Our MP-MAE compares favourably to prior work on SSL for Earth observation data - even with a small encoder.</li>
+          </ol>
         </div>
       </div>
     </div>
@@ -442,8 +442,14 @@
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <h2 class="title">Citation</h2>
+      Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel, & Nico Lang (2024). MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
+      <br><br>
+      <pre><code>@article{mmearth2024,
+    title={{MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning}},
+    author={Vishal Nedungadi and Ankit Kariryaa and Stefan Oehmcke and Serge Belongie and Christian Igel and Nico Lang},
+    year={2024},
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
