--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <li>MMEarth covers data from <b>1.2 million locations sampled globally</b>, making the optical image count similar to ImageNet-1K. At each
               location, data from <b>12 aligned modalities</b> were collected and grouped into pixel-level and image-level modalities.
             </li>
-            <li>MMEarth was <b>sampled uniformly across 14 biomes</b>, as per the <a href="https://academic.oup.com/bioscience/article/67/6/534/3102935?login=false" style="color:#3273dc;" target="_blank">Resolve Ecoregions</a> (e.g., Mangroves, Temperate Conifer Forests, Tundra, etc.).
+            <li>MMEarth was <b>sampled uniformly across 14 biomes</b> (e.g., Mangroves, Temperate Conifer Forests, Tundra, etc.).
               To increase diversity, we considered data from  <b>four years 2017–2020</b>.
               Furthermore, we ensured that time-critical modalities were collected around the Sentinel-2 observation date, which serves as the reference. 
             </li>
@@ -212,7 +212,7 @@
               (e.g., Biome, Ecoregion, ERA5 temperature, ERA5 precipitation, Geolocation, and Sentinel-2 observation date). 
             </li>
             <li>
-              The data can be downloaded from <a href="https://github.com/vishalned/MMEarth-data?tab=readme-ov-file#data-download" style="color:#3273dc;" target="_blank">here</a>. 
+              The data can be downloaded from [<a href="https://github.com/vishalned/MMEarth-data?tab=readme-ov-file#data-download" style="color:#3273dc;" target="_blank">here</a>].
               In addition to the full MMEarth dataset, we provide two smaller "taster" versions (MMEarth64 and MMEarth100k) to facilitate research in multi-modal representation learning:
               <!-- list of 3 data -->
               <ul>
@@ -295,6 +295,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
+          Our main results can be summarized as:
           <ol type="1">
             <li>Domain specific pretraining improves representations (i.e. pretraining on optical satellite images).
               Multi-spectral input images improve over RGB channels.</li>
