--- a/index.html
+++ b/index.html
@@ -476,7 +476,20 @@
 
 <!-- Statcounter tracking code -->
   
-<!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
+<!-- Default Statcounter code for Project Website
+https://vishalned.github.io/mmearth/ -->
+<script type="text/javascript">
+var sc_project=12996080; 
+var sc_invisible=1; 
+var sc_security="43c580c2"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12996080/0/43c580c2/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
     <!-- End of Statcounter Code -->
 
