--- a/index.html
+++ b/index.html
@@ -446,11 +446,16 @@
       <h2 class="title">Citation</h2>
       Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel, & Nico Lang (2024). MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
       <br><br>
-      <pre><code>@article{mmearth2024,
-    title={{MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning}},
-    author={Vishal Nedungadi and Ankit Kariryaa and Stefan Oehmcke and Serge Belongie and Christian Igel and Nico Lang},
-    year={2024},
-}</code></pre>
+      <pre><code>
+        @misc{nedungadi2024mmearth,
+      title={MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning},
+      author={Vishal Nedungadi and Ankit Kariryaa and Stefan Oehmcke and Serge Belongie and Christian Igel and Nico Lang},
+      year={2024},
+      eprint={2405.02771},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+      </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
