--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <meta name="twitter:card" content="MMEarth"> -->
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="representation learning,self-supervised learning,multi-modal, multi-task, masked autoencoder, Earth observation, remote sensing, satellite images, Sentinel-2">
-  <meta name="viewport" content="width=1200, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=1200">
 
 
   <title>MMEarth</title>
