--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   </section>
   <section class="section hero is-light">
     <figure class="model-image">
-      <img src="static/images/table_result_mp-mae2.png" alt="table results" style="width:50%">
+      <img src="static/images/table_result_mp-mae.png" alt="table results" style="width:50%">
     </figure>
   </section>
   
@@ -324,33 +324,33 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/img1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img1.jpeg" alt="MY ALT TEXT"/>
         <!-- <h2 class="subtitle has-text-centered">
           First image description.
         </h2> -->
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/img2.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img2.jpeg" alt="MY ALT TEXT"/>
         <!-- <h2 cs -->
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel/img3.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/carousel/img3.jpeg" alt="MY ALT TEXT"/>
         <!-- <h2 class="subtitle has-text-centered">
          Third image description.
        </h2> -->
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/carousel/img4.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/carousel/img4.jpeg" alt="MY ALT TEXT"/>
       <!-- <h2 class="subtitle has-text-centered">
        Fourth image description.
      </h2> -->
    </div>
    <div class="item">
     <!-- Your image here -->
-    <img src="static/images/carousel/img5.jpg" alt="MY ALT TEXT"/>
+    <img src="static/images/carousel/img5.jpeg" alt="MY ALT TEXT"/>
     <!-- <h2 class="subtitle has-text-centered">
      Fourth image description.
    </h2> -->
