--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
                   <span>arXiv</span>
                 </a>
               </span>
+
+              <span class="link-block">
+                <a href="https://torchgeo.readthedocs.io/en/latest/api/datasets.html" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fas fa-database"></i>
+                </span>
+                <span>TorchGeo</span>
+              </a>
+            </span>
+
+
             </div>
           </div>
         </div>
@@ -388,7 +400,7 @@
 
 
 <!-- Youtube video -->
-<!-- <section class="hero is-small is-light">
+<section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Video Presentation</h2>
@@ -396,13 +408,13 @@
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/yVZiDl2XJtc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section> -->
+</section>
 <!-- End youtube video -->
 
 
