--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               </span>
 
               <span class="link-block">
-                <a href="https://torchgeo.readthedocs.io/en/latest/api/datasets.html" target="_blank"
+                <a href="https://torchgeo.readthedocs.io/en/latest/api/datasets.html#mmearth" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-database"></i>
