--- a/index.html
+++ b/index.html
@@ -474,13 +474,13 @@
       <h2 class="title">Citation</h2>
       Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel, & Nico Lang (2024). MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
       <br><br>
-      <pre><code>@misc{nedungadi2024mmearth,
-      title={MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning},
-      author={Vishal Nedungadi and Ankit Kariryaa and Stefan Oehmcke and Serge Belongie and Christian Igel and Nico Lang},
-      year={2024},
-      eprint={2405.02771},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      <pre><code>@inproceedings{nedungadi2024mmearth,
+  title={MMEarth: Exploring multi-modal pretext tasks for geospatial representation learning},
+  author={Nedungadi, Vishal and Kariryaa, Ankit and Oehmcke, Stefan and Belongie, Serge and Igel, Christian and Lang, Nico},
+  booktitle={European Conference on Computer Vision},
+  pages={164--182},
+  year={2024},
+  organization={Springer}
 }</code></pre>
     </div>
 </section>
