--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
       </div>
     </div>
   </div>
+  <h2 class="title is-5 has-text-centered" style="padding-top: 50px;">Loading the dataset and pretrained models</h2>
+  <figure class="">
+            <img src="static/images/MMEarth_code_assets.svg" alt="MMEarth banner">
+          </figure>
 </section>
 <!-- End paper abstract -->
 
